# synopsys

./: mkdocs.yml  pyproject.toml
docs/Основы/: переменные_и_типы.md
