[tool.poetry]
name = "kids"
version = "0.1.0"
description = ""
authors = ["Michael <mpgg2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.0.10"
mkdocs = {extras = ["i18n"], version = "^1.4.2"}
pymdown-extensions = "^9.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
